@@ -833,9 +833,9 @@ public class RawClientTest {
                 // cookies from server
                 List<String> headerSetCookie = resp.getHeaderLines().stream()
                         .filter(h -> h.toLowerCase().contains("set-cookie"))
-                        .collect(Collectors.toList());
+                        .toList();
                 assertThat(headerSetCookie.size(), is(1));
-                assertThat(headerSetCookie.get(0), is("Set-Cookie: responseCookie=responseValue; responseCookie2=responseValue2\r\n"));
+                assertThat(headerSetCookie.get(0), is("set-cookie: responseCookie=responseValue; responseCookie2=responseValue2\r\n"));
             }
         }
 
